tests/snapshots/cli__reference_files@keywords.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/scanning/keywords.lox
---
status: 0
stdout:
  - And and on line 1
  - Class class on line 1
  - Else else on line 1
  - False false on line 1
  - For for on line 1
  - Fun fun on line 1
  - If if on line 1
  - Nil nil on line 1
  - Or or on line 1
  - Return return on line 1
  - Super super on line 1
  - This this on line 1
  - True true on line 1
  - Var var on line 1
  - While while on line 1
  - Eof EOF on line 19
stderr: []
